# mojo_opset

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: ascend_accuracy_ci.yml
mojo_opset/backends/: __init__.py
mojo_opset/backends/torch_npu/operators/: activation.py  attention.py  linear.py  norm.py  position_embedding.py
mojo_opset/backends/ttx/functions/: position_embedding.py
mojo_opset/backends/ttx/kernels/: __init__.py
mojo_opset/backends/ttx/kernels/mlu/: __init__.py  layernorm.py  utils.py
mojo_opset/backends/ttx/operators/: activation.py  indexer.py  normalization.py  position_embedding.py  quant.py  sampling.py
mojo_opset/core/: __init__.py  operator.py
mojo_opset/core/functions/: position_embedding.py
mojo_opset/core/operators/: activation.py  attention.py  gemm.py  indexer.py  misc.py  moe.py  position_embedding.py  quantize.py
mojo_opset/experimental/: __init__.py
mojo_opset/experimental/operators/: indexer.py
mojo_opset/modeling/: inference_demo.py  mojo_deepseek_v3.py  mojo_qwen3_dense.py  mojo_seed_oss_base.py  utils.py
mojo_opset/utils/: patching.py
tests/: utils.py
tests/accuracy/functions/: test_normalization.py  test_position_embedding.py
tests/accuracy/operators/: test_activation.py  test_attention.py  test_indexer.py  test_linear.py  test_moe.py  test_position_embedding.py  test_sampling.py
tests/distributed/: test_paged_gqa_tp.py
tests/perf/: benchmark.md  test_indexer.py  test_linear.py  test_position_embedding.py  test_sampling.py
tests/test_ttx_graph/: test_rope.py
(+7 files in other folders)
